react-app/src/components/Post/EachPost/EachPost.css
.single-post-container {
    position: relative;
    color:black;
    background: white;
    width: 100%;
    max-width: 540px;
    border-radius: 3px;
    margin-bottom: 20px;
    box-shadow: 0 0 0 0.5px lightgray;
    margin-top: 30px;
    padding-bottom: 50px;
}

.single-post-username{
    background-color: white;
    font-family:  "Favorit", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
    height: 100%;
    margin-left: 15px;
    margin-top: 10px;
    flex-direction: row;
    flex-grow: 1;
    justify-content: space-between;
    font-size: .875rem;
    font-weight: 700;
    line-height: 1.5;
    display: flex;
}

.single-post-body {
    overflow: clip;
    font-family:  "Favorit", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
    margin-left: 15px;
    margin-top: 10px;
    width: 90%;
    color: black;
    box-sizing: border-box;
    margin-top: 15px;
    margin-bottom: 15px;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
}

.single-post-title{
    font-family:  "Favorit", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
    margin-left: 15px;
    margin-top: 10px;
    width: 100%;
    color: black;
    box-sizing: border-box;
    margin-top: 15px;
    margin-bottom: 15px;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
}
.delete-and-edit-post{
    min-height: 45px;
}

.right-side-of-edit-delete{
    border-top: 0;
    justify-content: flex-end;
    align-items: center;
    margin: 0;
    padding: 0;
    display: flex;
}
.delete-post{
    border-top: 0;
    justify-content: flex-end;
    align-items: center;
    margin: 0;
    padding: 0;
    display: flex;
}
.edit-post{
    width: 48px;
    height: 48px;
    justify-content: center;
    align-items: center;
    display: flex;
}

.single-post-bottom {
    border-top: 1px solid lightgray;
    height: 0;
}

.single-post-bottom-clicked {
    border-top: 1px solid lightgray;
    height: 200px;
}

/* .right-side-bottom{
    font-family:  "Favorit", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
    height: 250px;
    flex-direction: column;
    font-size: .875rem;
    font-weight: 400;
    line-height: 1.5;
    display: flex;
    overflow: hidden;
    visibility: idden;
}

.right-side-bottom-clicked{
    font-family:  "Favorit", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
    height: 250px;
    flex-direction: column;
    font-size: .875rem;
    font-weight: 400;
    line-height: 1.5;
    display: flex;
    overflow: hidden;
    visibility: visible;
   
} */


button {

    border: 0.5px solid grey;
    cursor: pointer;
    border-radius: 5px;
}

.edit-post-container{
    margin: 0;
    font-weight: 700;
    line-height: 1;
    position: relative;
    margin-bottom: 20px;
}

.delete-button{
    font-size: 15px;
}

.each-image{
    width: 100%;
    height: 100%;

    object-fit: cover;
}

.image-container{
    width: 100%;
    line-height: 0;
    position: relative;
}

.liked-like{
    color: orange;
    background: transparent;
    border: none;
    justify-content: flex-end;
    display:inline;
    
}

.unliked-like{
    color: navy;
    background: transparent;
    border: none;
    justify-content: flex-end;
    

}

.like-post-container{
    border-top: 0;
    justify-content: flex-end;
    align-items: center;
    margin: 0;
    padding: 0;
    display: flex; 
}

.follow-button {
    cursor: pointer;
    margin-left: 15px;
    margin-right: 10px;
    margin-top: 1px;
}

.nav-for-comments-likes{
    min-height: 30px;
    border-top: 1px solid lightgray;
    
}

.notes-label {
 
    display:inline;
    
    align-items: center;
    
}

.notes-label-text{
    margin: 0;
    display:inline;
    cursor: pointer;
    padding-left: 5px;
    padding-right: 5px;
}

.amount-of-comments-plus-likes{
    margin-left: 5px;
}

.comment-button{
    width: 5%;
  height: 20px;
    align-items: center;
   
    margin-left: 65% ;
    padding: 0;
    
 
}

.logged-out-comments-clicked{
visibility: visible;
border-top: 1px solid lightgray;
    height: 80px;
    padding-bottom: 20px;
}

.logged-out-comments{
visibility: hidden;
border-top: 1px solid lightgray;
    height: 0;
}
.show-likes-for-post{
    margin: 0;
    display:inline;
    cursor: pointer;
}

.show-likes-for-post-drop-down{
    visibility: hidden;
    height: 0;

}

.show-likes-for-post-drop-down-clicked{
visibility: visible;
background: white;
height: 85px;
overflow: scroll;
overflow-wrap: anywhere;
flex: 1 1 0%;
justify-content: space-between;
align-items: center;
display: flex;
flex-direction: column;
align-items: flex-start;
padding-left: 10px;
margin-top: 10px;



}

.display-username-of-likes{
    vertical-align: top;
    display: inline-block;
    margin-top: 5px;
    margin-bottom: 5px;
}


.link-for-username{
    text-decoration: none;
}

